CORS configuration supplemented with env variable